Improve UI/UX of bookmark popup

--- a/less/navigationBar.less
+++ b/less/navigationBar.less
@@ -616,6 +616,18 @@
       opacity: 0;
       animation-fill-mode: forwards;
     }
+
+    .bookmarkButton {
+      border: 1px solid #CBCBCB;
+      border-right: none;
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
+      box-sizing: border-box;
+      height: 25px;
+      line-height: 25px;
+      margin-top: 2px;
+      margin-right: -2px;
+    }
   }
 
   &.titleMode {
