fixed shadowing, colors, alignments on mac

--- a/less/variables.less
+++ b/less/variables.less
@@ -18,7 +18,7 @@
 @chromeTertiary: #c7c7c7;
 @chromeText: #555555;
 
-@tabsBackground: #dcdcdc;
+@tabsBackground: #dddddd;
 @navigationBarBackground: @chromeSecondary;
 @navigationBarBackground: white;
 @chromeBorderColor: @chromePrimary;
@@ -63,8 +63,8 @@
 @switchNubShadow: 1px 1px 5px -2px black;
 
 @navbarHeight: 36px;
-@tabsToolbarHeight: 23px;
-@tabPagesHeight: 12px;
+@tabsToolbarHeight: 26px;
+@tabPagesHeight: 9px;
 @bookmarksToolbarHeight: 24px;
 @bookmarksToolbarWithFaviconsHeight: 28px;
 @bookmarksFileIconSize: 13px;
